created prompts for all roles.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <header class="p-5 text-center text-white bg-danger">
         <h1>My Team</h1>
     </header>
-    <main class="col-12 flex-container">
+    <main id="team-container" class="col-12 flex-container">
         <div class="card col-3 m-3 bg-light">
             <div  class="card-header bg-primary text-white p-1">
                 <h2>Name</h2>
